--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <ul class="dropdown-menu dropdown-menu-right">
                                     <li><a class="dropdown-item" href="#">My account</a></li>
                                     <li><a class="dropdown-item" href="./login.html">Sign in</a></li>
-                                    <li><a class="dropdown-item" href="./log-out.html">Log out</a></li>
+                                    <li><a class="dropdown-item" id="logout" href="#">Log out</a></li>
                                 </ul>
                             </div>
                             <!-- Single Wedge Start -->
@@ -212,7 +212,7 @@
                         <!-- 1st tab start -->
 
                         <div class="row main_card" id="">
-                           
+
                         </div>
 
                     </div>
