--- a/login.html
+++ b/login.html
@@ -73,6 +73,7 @@
                                 <ul class="dropdown-menu dropdown-menu-right">
                                     <li><a class="dropdown-item" href="my-account.html">My account</a></li>
                                     <li><a class="dropdown-item" href="login.html">Sign in</a></li>
+                                    <li><a class="dropdown-item" id="logout" href="">Log out</a></li>
                                 </ul>
                             </div>
                             <!-- Single Wedge Start -->
