--- a/login.html
+++ b/login.html
@@ -84,8 +84,8 @@
                             <a href="#offcanvas-cart"
                                 class="header-action-btn header-action-btn-cart offcanvas-toggle pr-0">
                                 <i class="pe-7s-shopbag"></i>
-                                <span class="header-action-num">01</span>
-                                <!-- <span class="cart-amount">€30.00</span> -->
+                                <span class="header-action-num"></span>
+                                <span class="cart-amount">€30.00</span>
                             </a>
                             <a href="#offcanvas-mobile-menu"
                                 class="header-action-btn header-action-btn-menu offcanvas-toggle d-lg-none">
@@ -110,7 +110,7 @@
             </div>
             <div class="body customScroll">
                 <ul class="minicart-product-list">
-                    <li>
+                    <!-- <li>
                         <a href="single-product.html" class="image"><img src="assets/images/product-image/1.jpg"
                                 alt="Cart product Image"></a>
                         <div class="content">
@@ -118,25 +118,8 @@
                             <span class="quantity-price">1 x <span class="amount">$21.86</span></span>
                             <a href="#" class="remove">×</a>
                         </div>
-                    </li>
-                    <li>
-                        <a href="single-product.html" class="image"><img src="assets/images/product-image/2.jpg"
-                                alt="Cart product Image"></a>
-                        <div class="content">
-                            <a href="single-product.html" class="title">Handmade Ceramic Pottery</a>
-                            <span class="quantity-price">1 x <span class="amount">$13.28</span></span>
-                            <a href="#" class="remove">×</a>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="single-product.html" class="image"><img src="assets/images/product-image/3.jpg"
-                                alt="Cart product Image"></a>
-                        <div class="content">
-                            <a href="single-product.html" class="title">Hand Painted Bowls</a>
-                            <span class="quantity-price">1 x <span class="amount">$17.34</span></span>
-                            <a href="#" class="remove">×</a>
-                        </div>
-                    </li>
+                    </li> -->
+                    
                 </ul>
             </div>
             <div class="foot">
@@ -157,7 +140,7 @@
             
             <div class="body customScroll">
                 <ul class="minicart-product-list">
-                    <li>
+                    <!-- <li>
                         <a href="single-product.html" class="image"><img src="assets/images/product-image/1.jpg"
                                 alt="Cart product Image"></a>
                         <div class="content">
@@ -165,31 +148,13 @@
                             <span class="quantity-price">1 x <span class="amount">$18.86</span></span>
                             <a href="#" class="remove">×</a>
                         </div>
-                    </li>
-                    <li>
-                        <a href="single-product.html" class="image"><img src="assets/images/product-image/2.jpg"
-                                alt="Cart product Image"></a>
-                        <div class="content">
-                            <a href="single-product.html" class="title">Handmade Ceramic Pottery</a>
-                            <span class="quantity-price">1 x <span class="amount">$43.28</span></span>
-                            <a href="#" class="remove">×</a>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="single-product.html" class="image"><img src="assets/images/product-image/3.jpg"
-                                alt="Cart product Image"></a>
-                        <div class="content">
-                            <a href="single-product.html" class="title">Hand Painted Bowls</a>
-                            <span class="quantity-price">1 x <span class="amount">$37.34</span></span>
-                            <a href="#" class="remove">×</a>
-                        </div>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <div class="foot">
                 <div class="buttons mt-30px">
-                    <a href="cart.html" class="btn btn-dark btn-hover-primary mb-30px">view cart</a>
-                    <a href="checkout.html" class="btn btn-outline-dark current-btn">checkout</a>
+                    <a href="cart.html" class="btn btn-dark btn-hover-primary mb-30px">Buy Items</a>
+                    <a href="#" class="btn btn-outline-dark clear-cart">Clear Cart </a>
                 </div>
             </div>
         </div>
