--- a/shop.html
+++ b/shop.html
@@ -153,8 +153,8 @@
             </div>
             <div class="foot">
                 <div class="buttons mt-30px">
-                    <a href="cart.html" class="btn btn-dark btn-hover-primary mb-30px">Buy Items</a>
-                    <a href="#" class="btn btn-outline-dark  clear-cart">Clear Cart </a>
+                    <a href="#" class="btn btn-dark btn-hover-primary mb-30px buy-items" data-bs-toggle="modal" data-bs-target="#orderModal">Buy Items</a>
+                    <a href="#" class="btn btn-outline-dark  clear-cart" >Clear Cart </a>
                 </div>
             </div>
         </div>
