--- a/login.html
+++ b/login.html
@@ -70,10 +70,10 @@
                             <div class="header-bottom-set dropdown">
                                 <button class="dropdown-toggle header-action-btn" data-bs-toggle="dropdown"><i
                                         class="pe-7s-users"></i></button>
-                                <ul class="dropdown-menu dropdown-menu-right">
-                                    <li><a class="dropdown-item" href="my-account.html">My account</a></li>
-                                    <li><a class="dropdown-item" href="login.html">Sign in</a></li>
-                                    <li><a class="dropdown-item" id="logout" href="">Log out</a></li>
+                                <ul class="dropdown-menu dropdown-menu-right account-menu">
+                                    <li><a class="dropdown-item" href="./my-account.html">My account</a></li>
+                                    <li><a class="dropdown-item" href="./login.html">Sign in</a></li>
+                                    <li><a class="dropdown-item" id="logout" href="logout.html">Log out</a></li>
                                 </ul>
                             </div>
                             <!-- Single Wedge Start -->
@@ -85,7 +85,7 @@
                                 class="header-action-btn header-action-btn-cart offcanvas-toggle pr-0">
                                 <i class="pe-7s-shopbag"></i>
                                 <span class="header-action-num"></span>
-                                <span class="cart-amount">€30.00</span>
+                                <span class="cart-amount"></span>
                             </a>
                             <a href="#offcanvas-mobile-menu"
                                 class="header-action-btn header-action-btn-menu offcanvas-toggle d-lg-none">
